--- a/paper/latex_macros.tex
+++ b/paper/latex_macros.tex
@@ -51,6 +51,7 @@
 \def\Remaining{\Gamma}
 \def\TotalRemaining{{\Gamma_{\textnormal{tot}}}}
 \def\StartsWith{\sigma}
+\def\StartContains{\phi}
 \def\Queue{Q}
 \DeclareMathOperator*{\argmin}{argmin}
 \DeclareMathOperator*{\argmax}{argmax}
