--- a/paper/content.tex
+++ b/paper/content.tex
@@ -880,12 +880,12 @@ and let~$p_k$ be an antecedent in~$\Prefix$.
 If~$p_k$ in the context of~$\Prefix$ has
 insufficient support (Theorem~\ref{thm:min-capture}),
 insufficient accurate support (Theorem~\ref{thm:min-capture-correct}),
-or whose support almost equals the set of data
-not captured by~$\Prefix$ (Theorem~\ref{thm:default-similar}),
+or whose support is too similar to the set of data not captured by
+preceding antecedents (Theorem~\ref{thm:default-similar}),
 let us say that prefix~$\Prefix$ rejects antecedent~$p_K$.
 %
 Below, Theorem~\ref{thm:default-similar}
-explains the last of the above conditions,
+makes the last of the above conditions precise,
 and Theorem~\ref{thm:reject} describes large classes of
 related rule lists whose prefixes all reject the same antecedent.
 
