--- a/paper/latex_macros.tex
+++ b/paper/latex_macros.tex
@@ -55,6 +55,8 @@
 \def\Queue{Q}
 \DeclareMathOperator*{\argmin}{argmin}
 \DeclareMathOperator*{\argmax}{argmax}
+\def\Major{\q_{\textnormal{maj}}}
+\def\Minor{\q_{\textnormal{min}}}
 
 \newcommand{\A}{\mathcal{A}}
 \newcommand{\Ac}{\mathcal{A}^c}
